<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <EditText
        android:id="@+id/loginEditTextEmail"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLabel" />

    <EditText
        android:id="@+id/loginEditTextPassword"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/loginEditTextEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginEditTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginEditTextEmail" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/palette_first"
        android:text="@string/loginButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEditTextPassword" />

    <TextView
        android:id="@+id/emailFieldLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/emailText"
        app:layout_constraintStart_toStartOf="@+id/loginEditTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginEditTextEmail" />

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/loginLabel"
        android:textAlignment="center"
        android:textColor="@color/palette_first"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/passwordFieldLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordText"
        app:layout_constraintStart_toStartOf="@+id/loginEditTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginEditTextPassword" />

    <TextView
        android:id="@+id/noAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/noAccountText"
        app:layout_constraintStart_toStartOf="@+id/loginEditTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/registerLinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:text="@string/registerLinkText"
        android:textColor="@color/palette_first"
        app:layout_constraintBottom_toBottomOf="@+id/noAccountText"
        app:layout_constraintStart_toEndOf="@+id/noAccountText"
        app:layout_constraintTop_toTopOf="@+id/noAccountText" />

</androidx.constraintlayout.widget.ConstraintLayout>