<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerLabel"
        android:textAlignment="center"
        android:textColor="@color/palette_first"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259" />

    <EditText
        android:id="@+id/registerEditTextEmail"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/registerEditTextName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerEditTextName"
        app:layout_constraintTop_toBottomOf="@+id/registerNameLabel"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/registerEmailLabel"
        android:layout_width="63dp"
        android:layout_height="17dp"
        android:text="@string/emailText"
        app:layout_constraintStart_toStartOf="@+id/registerEditTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/registerEditTextEmail" />

    <EditText
        android:id="@+id/registerEditTextPassword"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/registerEditTextEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerEditTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailLabel" />

    <TextView
        android:id="@+id/registerPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordText"
        app:layout_constraintStart_toStartOf="@+id/registerEditTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/registerEditTextPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/palette_first"
        android:text="@string/registerButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordLabel" />

    <EditText
        android:id="@+id/registerEditTextName"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLabel" />

    <TextView
        android:id="@+id/registerNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerNameLabel"
        app:layout_constraintStart_toStartOf="@+id/registerEditTextName"
        app:layout_constraintTop_toBottomOf="@+id/registerEditTextName" />
</androidx.constraintlayout.widget.ConstraintLayout>