<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="horizontal">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/receiptEntriesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/add_receipt_entry_name"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/addReceiptEntryTitle"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></EditText>

        <EditText
            android:id="@+id/add_receipt_entry_value"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/addReceiptEntryValue"
            android:inputType="numberDecimal"
            android:textColor="@color/palette_second"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/add_receipt_entry_name"
            app:layout_constraintStart_toEndOf="@+id/add_receipt_entry_name"
            app:layout_constraintTop_toTopOf="@+id/add_receipt_entry_name"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/receiptEntryPeople"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/rounded_corners"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:gravity="center"
            android:hint="@string/addReceiptEntryPeople"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_receipt_entry_name"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/person_remove"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>